# trumproom

./: .env.example  .gitignore  README.md  pyproject.toml
src/trumproom/: __init__.py  api.py  crew.py  main.py
src/trumproom/config/: agents.yaml  tasks.yaml
