[project]
name = "trumproom"
version = "0.1.0"
description = "trumproom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
]

[project.scripts]
trumproom = "trumproom.main:run"
run_crew = "trumproom.main:run"
train = "trumproom.main:train"
replay = "trumproom.main:replay"
test = "trumproom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
